[gd_scene load_steps=5 format=3 uid="uid://uryt682oe41v"]

[ext_resource type="Script" path="res://Objects/swirling_tree.gd" id="1_3nrts"]
[ext_resource type="Texture2D" uid="uid://dbijc61vbk1rw" path="res://Textures/Items/Nature/Swirling tree1.png" id="1_53xmm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7w4oi"]
size = Vector2(39, 51)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_otvx4"]
size = Vector2(55, 90.5)

[node name="SwirlingTree" type="StaticBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 5
collision_mask = 5
script = ExtResource("1_3nrts")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(6.5, 20.5)
shape = SubResource("RectangleShape2D_7w4oi")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.937255, 0.937255, 0.937255, 1)
position = Vector2(2, -0.5)
scale = Vector2(1.03125, 0.992188)
texture = ExtResource("1_53xmm")

[node name="TreeHitTimer" type="Timer" parent="."]
wait_time = 0.55
one_shot = true

[node name="HurtBox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0.5, -2.75)
shape = SubResource("RectangleShape2D_otvx4")

[connection signal="timeout" from="TreeHitTimer" to="." method="_on_tree_hit_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
